<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="55dp"
            android:hint="@string/user_name" />
        <EditText
            android:id="@+id/edit_user_surname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="55dp"
            android:hint="@string/user_surname" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="55dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="55dp"
            android:hint="@string/phone_number"
            android:maxLength="10" />


    </RelativeLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:background="@color/registerButtonColor"
        android:text="@string/register_button"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>